upgraded history page, implemented sightseeing page, waiting for feedback

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             <div class="logo">Versailles</div>
             <ul class="nav-links">
                 <li><a href="pages/history.html">History</a></li>
-                <li><a href="sightseeing.html">Sightseeing</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="pages/sightseeing.html">Sightseeing</a></li>
+                <li><a href="pages/events.html">Events</a></li>
+                <li><a href="pages/services.html">Services</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="intro">
             <h1>Welcome to Versailles</h1>
             <p>Experience the elegance, history, and beauty of Versailles.</p>
-            <a href="sightseeing.html" class="cta-button">Explore Now</a>
+            <a href="pages/sightseeing.html" class="cta-button">Explore Now</a>
         </div>
     </header>
 </body>
