--- a/pages/history.html
+++ b/pages/history.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>History of Versailles</title>
     <link rel="stylesheet" href="assets/css/history.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -22,40 +24,167 @@
     </header>
 
     <main>
+        <section class="timeline">
+            <h2>Historical Timeline of Versailles</h2>
+            <div class="timeline-container">
+                <div class="timeline-item">
+                    <h3>1623</h3>
+                    <p>Louis XIII builds a hunting lodge at Versailles, marking the beginning of its transformation.</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>1661</h3>
+                    <p>Louis XIV expands the lodge into the grand Palace of Versailles.</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>1789</h3>
+                    <p>The French Revolution leads to the royal family leaving Versailles.</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>1919</h3>
+                    <p>The Treaty of Versailles is signed in the Hall of Mirrors, ending World War I.</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>Today</h3>
+                    <p>
+                        Versailles is preserved as a UNESCO World Heritage Site, attracting millions of visitors to its
+                        palace, gardens, and historic estates each year.</p>
+                </div>
+            </div>
+        </section>
+
         <section class="history-intro">
             <h1>History of Versailles</h1>
-            <p>Explore the fascinating history of the city of Versailles and its iconic palace, from its origins to its role in shaping French and world history.</p>
+            <p>Explore the fascinating history of the city of Versailles and its iconic palace, from its origins to its
+                role in shaping French and world history.</p>
         </section>
 
         <section class="history-content">
             <article>
                 <h2>The Origins of Versailles</h2>
-                <img src="assets/images/historicversailles.jpg" alt="Historic view of Versailles">
-                <p>Originally a small rural village in the 11th century, Versailles gained prominence when King Louis XIII built a hunting lodge in 1623. This marked the beginning of Versailles’ transformation into a political and cultural hub.</p>
+                <div class="image-gallery">
+                    <img src="assets/images/history/historicversailles.jpg">
+                    <img src="assets/images/history/versailles1623.jpg">
+                </div>
+                <p>The story of Versailles begins in <b> 1623 </b>when <b>Louis XIII</b>, King of France, ordered the
+                    construction of a small
+                    hunting lodge on the outskirts of Paris. Located in a rural forested area, it served as a peaceful
+                    retreat away from the political intrigues of the capital. The modest building was made of brick and
+                    stone, intended for practical use rather than luxury. However, <b>Louis XIII</b> gradually expanded the
+                    site, adding stables and gardens, indicating his growing fondness for the location. While the
+                    original lodge no longer exists, this early development marked the beginning of Versailles'
+                    transformation into one of the most iconic royal estates in the world.</p>
             </article>
 
-            <article>
+            <article >
                 <h2>Louis XIV and the Palace</h2>
-                <img src="assets/images/louis14.jpg" alt="Portrait of Louis XIV">
-                <p>King Louis XIV, known as the Sun King, expanded the lodge into the grand Palace of Versailles starting in 1661. The palace became the symbol of absolute monarchy, hosting elaborate ceremonies and royal court life.</p>
+                <div class="louis-xiv-gallery">
+                    <img src="assets/images/history/louis14.jpg">
+                    <img src="assets/images/history/plan-chateau.jpg" >
+                </div>
+                <p>The true metamorphosis of Versailles began under <b>Louis XIV</b>, who ascended the throne in 1643
+                    and
+                    resolved to make Versailles the seat of his court and government in <b>1661</b>. He envisioned a
+                    palace
+                    that would symbolize his absolute power as the "Sun King." Over the next several decades, the
+                    hunting lodge grew into a vast architectural marvel. The expansion included the Hall of Mirrors, a
+                    grand gallery with 357 mirrors reflecting the sunlight and symbolizing <b>Louis XIV</b>'s power.
+                    Landscape
+                    architect <b>André Le Nôtre</b> designed elaborate gardens with fountains, sculptures, and perfectly
+                    manicured lawns, showcasing the wealth and influence of the French monarchy. By <b>1682</b>,
+                    <b>Louis XIV</b>
+                    moved his court to Versailles, making it the de facto capital of France. The palace became a hub of
+                    art, culture, and political intrigue, cementing its legacy as a symbol of royal opulence.
+                </p>
             </article>
 
             <article>
                 <h2>Role in French History</h2>
-                <img src="../assets/images/french-revolution.jpg" alt="The French Revolution">
-                <p>The Palace of Versailles was at the center of significant events, such as the French Revolution in 1789. The royal family was forced to leave the palace, marking the decline of absolute monarchy in France.</p>
+                <div class="image-gallery">
+                    <img src="assets/images/history/revolution1.jpg">
+                    <img src="assets/images/history/revolution2.jpg">
+                </div>
+                <p>By the late 18th century, Versailles had become synonymous with the excesses of the monarchy, and its
+                    grandeur stood in stark contrast to the struggles of the common people. In <b>May 1789</b>, King
+                    <b>Louis XVI</b>
+                    summoned the Estates-General to Versailles in an attempt to address France’s financial crisis. This
+                    assembly, representing the three estates (clergy, nobility, and commoners), was held in the palace,
+                    but it quickly escalated into a revolutionary movement. The Third Estate broke away, forming the
+                    National Assembly and vowing to draft a new constitution in what became known as the Tennis Court
+                    Oath. Versailles' role as a symbol of monarchy made it a focal point for revolutionary fervor, and
+                    by <b>October 1789</b>, the royal family was forced to leave the palace for Paris under pressure
+                    from an
+                    angry mob.
+                </p>
             </article>
 
             <article>
                 <h2>The Treaty of Versailles</h2>
-                <img src="../assets/images/treaty-versailles.jpg" alt="Signing of the Treaty of Versailles">
-                <p>In 1919, the Treaty of Versailles was signed in the Hall of Mirrors, officially ending World War I. This event further cemented the palace’s place in global history.</p>
+                <div class="image-gallery">
+                    <img src="assets/images/history/treaty1.jpg">
+                    <img src="assets/images/history/treaty2.jpg">
+                </div>
+                <p>In <b>1919</b>, Versailles once again became a stage for international diplomacy with the signing of
+                    the
+                    Treaty of Versailles, which officially ended <b>World War I</b>. The treaty, signed in the Hall of
+                    Mirrors,
+                    imposed severe reparations on Germany and redrew the map of Europe, establishing new nations and
+                    altering borders. The Hall of Mirrors, once a symbol of <b>Louis XIV</b>’s glory, now served as a setting
+                    for the contentious negotiations that followed the Great War. While the treaty aimed to ensure
+                    lasting peace, its harsh terms created resentment in Germany, contributing to the rise of Adolf
+                    Hitler and the outbreak of <b>World War II</b>. This moment marked Versailles not only as a
+                    historical
+                    monument but also as a stage for shaping modern global politics.</p>
+            </article>
+
+            <article>
+                <h2>Versailles Nowadays</h2>
+                <div class="image-gallery">
+                    <img src="assets/images/history/todayversailles1.jpg">
+                    <img src="assets/images/history/todayversailles2.jpg">
+                </div>
+                <p>Versailles has transformed from a royal palace into one of the most visited and iconic cultural
+                    landmarks in the world. The Palace of Versailles, a<b> UNESCO</b> World Heritage Site since <b>1979</b>, attracts
+                    millions of tourists annually who come to admire its architectural grandeur, lavish interiors like
+                    the Hall of Mirrors, and the expansive gardens designed by André Le Nôtre.
+
+                    The estate includes the <b>Trianon Palaces</b> and <b>Marie-Antoinette</b>’s Estate, where visitors can explore
+                    the queen’s private retreat and the picturesque Hamlet. Versailles also serves as a venue for major
+                    art exhibitions, cultural events, and state ceremonies, maintaining its role as a center of art and
+                    diplomacy.
+
+                    In addition to its historical and cultural significance, Versailles has a thriving modern town
+                    around the palace, known for its charming streets, bustling markets, and a rich local life. As a
+                    blend of history, culture, and community, Versailles today continues to embody the essence of French
+                    heritage and remains a global symbol of grandeur and sophistication.</p>
             </article>
         </section>
     </main>
 
+    <script>
+        const images = document.querySelectorAll('.history-content img');
+        const lightbox = document.createElement('div');
+        lightbox.className = 'lightbox';
+        document.body.appendChild(lightbox);
+
+        images.forEach(img => {
+            img.addEventListener('click', () => {
+                lightbox.classList.add('active');
+                const imgElement = document.createElement('img');
+                imgElement.src = img.src;
+                lightbox.innerHTML = ''; // Clear previous image
+                lightbox.appendChild(imgElement);
+            });
+        });
+
+        lightbox.addEventListener('click', () => {
+            lightbox.classList.remove('active');
+        });
+    </script>
+
+
     <footer>
-        <p>&copy; 2024 Versailles Project. All rights reserved.</p>
+        <p>&copy; 2024 WebDesign Project. </p>
     </footer>
 </body>
+
 </html>
