Modifying path + add footer on home page

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
             <a href="pages/sightseeing.html" class="cta-button">Explore Now</a>
         </div>
     </header>
+    <footer>
+        <p>&copy; 2024 WebDesign Project. </p>
+    </footer>
 </body>
 </html>
