--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,13 +11,13 @@
 <body>
     <div class="header">
         <nav class="header-nav">
-            <div class="logo">Versailles</div>
+            <a href="../index.html" class="logo">Versailles</a>
             <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="sightseeing.html">Sightseeing</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
