--- a/pages/history.html
+++ b/pages/history.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="logo">Versailles</div>
+    <div class="header">
+        <nav class="header-nav">
+            <a href="../index.html" class="logo">Versailles</a>
             <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="history.html">History</a></li>
                 <li><a href="sightseeing.html">Sightseeing</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
 
     <main>
         <section class="timeline">
