Unification of home page's header

--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
     <link rel="stylesheet" href="assets/css/global.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Versailles</div>
+    <div class="header">
+        <nav class="header-nav">
+            <a href="../index.html" class="logo">Versailles</a>
             <ul class="nav-links">
-                <li><a href="pages/history.html">History</a></li>
-                <li><a href="pages/sightseeing.html">Sightseeing</a></li>
-                <li><a href="pages/events.html">Events</a></li>
-                <li><a href="pages/services.html">Services</a></li>
-                <li><a href="pages/contact.html">Contact</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="sightseeing.html">Sightseeing</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+    </div>
+    <main>
         <div class="intro">
             <h1>Welcome to Versailles</h1>
             <p>Experience the elegance, history, and beauty of Versailles.</p>
             <a href="pages/sightseeing.html" class="cta-button">Explore Now</a>
         </div>
-    </header>
+    </main>
     <footer>
         <p>&copy; 2024 WebDesign Project. </p>
     </footer>
