Fix : header linking issues

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="header">
         <nav class="header-nav">
-            <a href="../index.html" class="logo">Versailles</a>
+            <a class="logo">Versailles</a>
             <ul class="nav-links">
-                <li><a href="history.html">History</a></li>
-                <li><a href="sightseeing.html">Sightseeing</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="pages/history.html">History</a></li>
+                <li><a href="pages/sightseeing.html">Sightseeing</a></li>
+                <li><a href="pages/events.html">Events</a></li>
+                <li><a href="pages/services.html">Services</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
