--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover the elegance and history of Versailles, France.">
-    <title>Versailles - Home</title>
+    <title>Contacts Point in Versailles</title>
     <link rel="stylesheet" href="assets/css/contact.css">
 </head>
 <body>
