Add : events full page with assets and services base page

--- a/pages/events.html
+++ b/pages/events.html
@@ -22,7 +22,258 @@
         </nav>
     </div>
     <main>
-
+        <h1>Coming Events in Versailles</h1>
+        <div class="events">
+            <article>
+                <a href="https://www.versailles.fr/923-6096/culture/la-culture-a-versailles/agenda/fiche/exposition-de-peintures-et-sculptures-de-l-artiste-changzheng-zhu.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/changzeng zhu.jpg">
+                        <h2>Exhibition of paintings and sculptures by the artist Changzheng Zhu </h2>
+                        <h3>A Franco-Chinese artist who graduated from the Ecole des Beaux-Arts de Versailles, Changzheng Zhu gives women a prominent place in her work.</h3>
+                        <p>
+                            <br>Depicted in paintings or sculptures, melancholy or dreamy, the women in her world are both strong and gentle.
+                            <br>Artist Changzheng Zhu presents her latest collection at this year-end exhibition.
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">07 dec</div>
+                            <hr>
+                            <div class="date">29 dec</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/654-6107/associations-et-quartiers/vie-associative/agenda-maison-des-associations/fiche/109e-salon-de-l-ecole-francaise.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/109th salon.jpg">
+                        <h2>109th Salon de l'école française</h2>
+                        <h3>
+                            The 109th Salon de l'École française presents some forty artists - painters, sculptors, draughtsmen and photographers - with the high artistic standards that have made its reputation and success.
+                        </h3>
+                        <p>
+                            <br>The 109th Salon de l'Ecole française presents some forty contemporary artists, renowned or selected for the quality of their work.
+                            <br>The guests of honor will be Versailles-born naval painter Bertrand de Miollis, and animal sculptor Alain Courtaigne.
+                            <br>Since 1903, the Ecole française association has been promoting artists' works through its annual exhibition. An essential activity at a time when subsidies to the major Parisian Salons were dwindling and many galleries were closing.
+                            <br>During the 20th century, it was one of the major Parisian Salons, and for some years now it has been held in the Royal City. A historic contemporary art fair, it combines tradition, modernity and a taste for the beautiful!
+                            <br>To find out more, visit: salonecolefrancaise.com
+                            <br>We look forward to seeing many of you before the festive season.
+                            <br>A must-attend event following the great success of the previous Salon.
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">10 dec</div>
+                            <hr>
+                            <div class="date">15 dec</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/26-3743/que-faire-a-versailles/fiche/visite-guidee-en-anglais-des-appartements-prives-de-louis-xv-et-louis-xvi.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/visite chateau.jpg">
+                        <h2>Guided tour in English of the Private Apartments of Louis XV and Louis XVI</h2>
+                        <h3>
+                            NEW OFFER - Immerse yourself in the elegance of Versailles and the private lives of its kings.
+                        </h3>
+                        <p>
+                            <br>You'll discover a wing of the château steeped in history and accessible only on guided tours. You'll be transported by the story of exceptional places such as the salon in which Mozart played a private concert for the king, or the one in which Benjamin Franklin was received when Louis XVI announced his support for American independence.
+                            <br>
+                            <br>During this 1.5-hour tour, you'll experience the intimate lives of these emblematic figures. You'll discover the secrets of French history that took place behind closed doors, out of sight of the public, as well as the workings and life of the Versailles court at the time.
+                            <br>
+                            <br>These remarkable spaces, true symbols of French refinement and 18th-century taste, are only accessible with a guide. The visit is therefore quiet and far from the crowds.
+                            <br>
+                            <br>As part of this guided tour, you'll enjoy free access to the rest of the château. Marvel at the palace's grandeur
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">01 jan</div>
+                            <hr>
+                            <div class="date">31 dec</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/26-5829/que-faire-a-versailles/fiche/l-atlas-des-2-mers-deplacement-par-frank-smith.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/2mers.jpg">
+                        <h2>"L'Atlas des 2-mers : displacement" by Frank Smith</h2>
+                        <h3>
+                            The Atlas des 2-mers is a project based on the Fort Vert site in the Hauts-de-France region, in the Pas-de-Calais département.
+                        </h3>
+                        <p>
+                            <br>The exhibition “L'Atlas des 2-mers : déplacement” is a project designed by Frank Smith based on the Fort Vert site, located in the Hauts-de-France region, in the Pas-de-Calais département. 
+                            <br>The Fort Vert coastal complex, with its 360 hectares of protected natural spaces, brings together a variety of environments characteristic of the North Sea coast: an immense foreshore, beaches, salt meadows, low dunes, hunting ponds, freshwater marshes, decalcified dunes, polders as well as stretches of trees and wetlands conducive to the presence of remarkable flora and fauna.
+                            <br>The site also served as a base for a migrant camp. Dismantled in October 2016, it will have sheltered up to 9,000 exiles.
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">04 oct</div>
+                            <hr>
+                            <div class="date">15 dec</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/923-6286/culture/la-culture-a-versailles/agenda/fiche/la-ville-intime-suite-exposition-de-lucie-gay.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/ville intime.jpg">
+                        <h2>La ville intime ( suite... ) - Exhibition by Lucie Gay</h2>
+                        <h3>
+                            La ville intime is a poetic pictorial journey through the city, time and matter. It's an invitation to discover a new way of looking at the city, that of painter Lucie Gay.
+                        </h3>
+                        <p>
+                            <br>This exhibition presents paintings resulting from her experimental, innovative and free-flowing technical research. On view are small-format paintings of Versailles, created using ancient methods that she has reappropriated (tempera, earth and ochre pigments, natural binders and resins).
+                            <br>With her personal vision of the city, nourished by her dreamlike observations, she rebuilds, reconstructs and finally restores what for her is the essence of these streets, alleys, passages and courtyards, where the passers-by who shape her intimate city live.
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">22 oct</div>
+                            <hr>
+                            <div class="date">11 jan</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/26-6064/que-faire-a-versailles/fiche/game-story-l-histoire-du-jeu-video.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/game story.jpg">
+                        <h2>Game Story: the history of videogames</h2>
+                        <h3>
+                            From October 19, 2024 to April 13, 2025, Europe's largest playable video-game retrospective will take up residence at the fully refurbished Ancienne Poste, retracing 70 years of video-game history.
+                        </h3>
+                        <p>
+                            <br>The City of Versailles and the MO5 digital heritage preservation association present the major exhibition “Game Story”. It retraces 70 years of video game history, on consoles, microcomputers and arcade terminals. Come and discover over a hundred machines and more than 500 games that will plunge you into the world of gamers.
+                            <br>From Tennis for Two, the world's first video game, in 1958, to the first arcade cabinet, Computer Space, in 1971, and of course Pong and the first Atari, Nintendo and SEGA game consoles, right up to the latest consoles, relive 70 years of video game history by handling over 100 mythical machines.
+                            <br>From arcade terminals to microcomputers and home consoles, every stage in the history of video games is represented. Whether you were born with a controller in your hand or simply want to discover the origins of your passion, Game Story is the event not to be missed.
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">09 oct</div>
+                            <hr>
+                            <div class="date">13 apr</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/925-5781/culture/espace-richaud/agenda/fiche/duy-anh-nhan-duc-les-cimes-de-l-asphalte.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/cimes asphalte.jpg">
+                        <h2>Duy Anh Nhan Duc - Asphalt peaks</h2>
+                        <h3>
+                            Artist Duy Anh Nhan Duc honors those who defy the limits of eternity before our very eyes: trees.
+                        </h3>
+                        <p>
+                            <br>Monumental sculptures in wood, bark prints, canvases made from leaf, fruit and seed pigments, frescoes of forest soil... these are just some of the explorations into the heart of matter that Duy Anh Nhan Duc is experimenting with at Espace Richaud.
+                            <br>The visual artist questions our links and interdependence with trees. Les cimes de l'asphalte evokes both the sacred place trees occupied in the cosmogony of primitive peoples, and those they occupy today in our modern societies.
+                            <br>The exhibition pays homage to these giants of space and time, and shows the vital place they occupy, for if we are to make a successful ecological and climatic transition, it will only be with the help of trees and forests.
+                            <br>A special program will be on offer. Nuit de la création: artist's installation at the Musée Lambinet from October 5 to 27
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">25 oct</div>
+                            <hr>
+                            <div class="date">26 jan</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/721-5810/culture/musee-lambinet/agenda-musee-lambinet/fiche/aux-couleurs-de-l-amour.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/couleurs amour.jpg">
+                        <h2>The colors of love</h2>
+                        <h3>
+                            Discover a presentation on the theme of Love in the Collectionneurs d'aujourd'hui room, on the first floor of the Musée Lambinet.
+                        </h3>
+                        <p>
+                            <br>This exhibition features 12 superb 17th and 18th century paintings from a private collection.
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">18 sep</div>
+                            <hr>
+                            <div class="date">01 feb</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/928-6213/culture/universite-ouverte-de-versailles/agenda-de-l-uov/fiche/carte-5-conferences.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/conference.jpg">
+                        <h2>5-conference card</h2>
+                        <h3>
+                            Buy a card to attend five conferences freely chosen from the 2024/2025 program and discover themes as varied as art, geopolitics and science.
+                        </h3>
+                        <p>
+                            <br>From December 2, 2024, the UOV is offering a card allowing you to attend five lectures of your choice from the program, subject to availability.
+                            <br>This card does not give access to the following lecture cycles: “Current Affairs” and “Middle East” (complete cycles).
+                            <br>
+                            <br>Card validity: from December 2, 2024 to May 31, 2025.
+                            <br>
+                            <br>The 5-lecture card is not subject to sliding-scale fees. It is non-refundable.
+                            <br>It is possible to invite a guest to a conference, in which case an additional entry fee will be charged to the card.
+                            <br>Take advantage of this card to attend conferences starting in January 2025.
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">02 dec</div>
+                            <hr>
+                            <div class="date">31 may</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/923-6309/culture/la-culture-a-versailles/agenda/fiche/article-353-du-code-penal.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/penal.jpg">
+                        <h2>Article 353 of the French Penal Code</h2>
+                        <h3>
+                            Martial Kermeur is arrested for throwing promoter Antoine Lazenec into the sea. Before the judge, he retraces the course of events that led to his arrest. Based on the Tanguy Viel novel.
+                        </h3>
+                        <p>
+                            <br>THE JUDGE: So you came back alone?
+                            <br>
+                            <br>KERMEUR: Yes, there were two of us and then I came back alone.
+                            <br>
+                            <br>THE JUDGE: So you know why you're here.
+                            <br>
+                            <br>KERMEUR: Yes, voluntary manslaughter.
+                            <br>
+                            <br>THE JUDGE: Yes. The body was found this morning.
+                            <br>
+                            <br>KERMEUR: I know.
+                            <br>
+                            <br>THE JUDGE: The best thing would be to start from the beginning.
+                            <br>
+                            <br>Martial Kermeur has just been arrested by the police for throwing property developer Antoine Lazenec into the sea. To the judge before whom he was brought, he retraced the course of events that led to his arrest: his divorce, the custody of his son Erwan, his dismissal and, above all, Lazenec's glittering plans. The temptation to invest all his redundancy money in a beautiful apartment overlooking the sea is great. But it has to be built.
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">07 dec</div>
+                            <hr>
+                            <div class="date">29 dec</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <a href="https://www.versailles.fr/654-5742/associations-et-quartiers/vie-associative/agenda-maison-des-associations/fiche/cafe-asso-faire-le-point-sur-l-inclusion-dans-mon-association.htm">
+                    <div class="anchor">
+                        <img src="assets/images/events/cafe asso.jpg">
+                        <h2>Café Asso': Taking stock of inclusion in my association</h2>
+                        <h3>
+                            Questioning ourselves in a benevolent way.
+                        </h3>
+                        <p>
+                            <br>It's important to ask questions about inclusion in the associative sector, because an association is not necessarily inclusive by nature.
+                            <br>Indeed, there is a strong temptation for associations to think that, because their governance is voluntary and democratic, they are inclusive by nature.
+                            <br>To encourage associations to reflect on the issues surrounding inclusion, the MDAE invites you to take part in this morning's event.
+                        </p>
+                        <div class="circle tr">
+                            <div class="date">13 dec</div>
+                        </div>
+                    </div>
+                </a>
+            </article>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 WebDesign Project. </p>
